--- a/jmax4you-admin/pom.xml
+++ b/jmax4you-admin/pom.xml
@@ -1,45 +1,30 @@
 <?xml version="1.0" encoding="UTF-8"?>
-
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+<project xmlns="http://maven.apache.org/POM/4.0.0"
+         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <parent>
-        <artifactId>jmax4you-cors</artifactId>
+        <artifactId>java-learn</artifactId>
         <groupId>com.jmax4you.learn</groupId>
         <version>${revision}</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
-    <artifactId>jmax4you-cors1</artifactId>
+    <artifactId>jmax4you-admin</artifactId>
     <name>${project.artifactId}</name>
-
 
     <dependencies>
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-web</artifactId>
         </dependency>
-
-        <dependency>
-            <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter-freemarker</artifactId>
-        </dependency>
-
-        <dependency>
-            <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter-test</artifactId>
-            <scope>test</scope>
-        </dependency>
-
         <dependency>
             <groupId>de.codecentric</groupId>
-            <artifactId>spring-boot-admin-starter-client</artifactId>
+            <artifactId>spring-boot-admin-server</artifactId>
         </dependency>
         <dependency>
-            <groupId>org.projectlombok</groupId>
-            <artifactId>lombok</artifactId>
+            <groupId>de.codecentric</groupId>
+            <artifactId>spring-boot-admin-server-ui</artifactId>
         </dependency>
     </dependencies>
-
-
     <build>
         <plugins>
             <plugin>
@@ -47,11 +32,11 @@
                 <artifactId>spring-boot-maven-plugin</artifactId>
                 <version>${spring.boot.version}</version>
                 <configuration>
-                    <mainClass>com.jmax4you.learn.cors1.App4Cors1</mainClass>
+                    <mainClass>com.jmax4you.learn.admin.App4Admin</mainClass>
                     <layout>ZIP</layout>
                     <!--true后打成jar包后就zip解压不了，false是可以解压-->
-<!--                    <executable>false</executable>-->
-<!--                    <excludeGroupIds>com.jmax4you</excludeGroupIds>-->
+                    <!--                    <executable>false</executable>-->
+                    <!--                    <excludeGroupIds>com.jmax4you</excludeGroupIds>-->
                 </configuration>
                 <executions>
                     <execution>
@@ -63,6 +48,4 @@
             </plugin>
         </plugins>
     </build>
-
-
 </project>
