--- a/jmax4you-cors/jmax4you-cors1/src/main/resources/application.properties
+++ b/jmax4you-cors/jmax4you-cors1/src/main/resources/application.properties
@@ -1,4 +1,5 @@
 server.port=9091
+spring.application.name=jmax-cors1-server
 #freemark\u914D\u7F6E
 spring.freemarker.allow-request-override=false
 spring.freemarker.allow-session-override=false
@@ -18,3 +19,7 @@ spring.freemarker.settings.default_encoding=UTF-8
 spring.freemarker.settings.classic_compatible=true
 spring.freemarker.order=1
 spring.freemarker.request-context-attribute=request
+#
+spring.boot.admin.client.url=http://127.0.0.1:9090
+management.endpoints.web.exposure.include=*
+management.endpoint.health.show-details=ALWAYS
